--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "formik": "^2.1.4",
+    "html2canvas": "^1.0.0-rc.5",
+    "htmltopdf": "^0.0.8",
+    "jspdf": "^1.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
