--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "formik": "^2.1.4",
+    "formik-material-ui": "^2.0.1",
     "html2canvas": "^1.0.0-rc.5",
-    "htmltopdf": "^0.0.8",
     "jspdf": "^1.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
